--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,30 @@
-<p>home works!</p>
+<div class="container">
+  <div class="container__header">
+    <p>Where in the world?</p>
+
+    <div class="container__header__dark-mode">
+      <i class="darkmode-icon"></i>
+      <p>Dark mode</p>
+    </div>
+  </div>
+  <div class="container__flags">
+    <div class="container__flags-filters-row">
+      <div class="filters-row__input">
+        <input type="text" placeholder="Search for a country...">
+      </div>
+
+      <div class="filters-row__select">
+        <select name="region" id="select-region" placeholder="Filter by Region">
+          <option value="1">Africa</option>
+          <option value="1">America</option>
+          <option value="1">Asia</option>
+          <option value="1">Europe</option>
+          <option value="1">Oceania</option>
+        </select>
+      </div>
+    </div>
+    <div class="container__flags-flags">
+      <app-flag></app-flag>
+    </div>
+  </div>
+</div>
