--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,7 +25,16 @@
       </div>
     </div>
     <div class="container__flags-flags">
-      <app-flag></app-flag>
+      <!-- <app-flag></app-flag> -->
+      <div class="flag__container">
+        <img class="flag__img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_the_Taliban.svg/320px-Flag_of_the_Taliban.svg.png" alt="pais">
+        <div class="flag_detail">
+          <p class="flag__country-name">Pais</p>
+          <p>Population:</p>
+          <p>Region:</p>
+          <p>Capital:</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
