--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var( --very-dark-blue);
+  font-family: var(--family);
 }
 
 .container__header{
