--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-home></app-home>
+<div class="container">
+  <div class="container__header">
+    <p class="header__title">Where in the world?</p>
+
+    <div class="container__header__dark-mode">
+      <i class="darkmode-icon"></i>
+      <p>Dark mode</p>
+    </div>
+  </div>
+  <app-home></app-home>
+</div>
