--- a/src/app/components/flag-details/flag-details.component.html
+++ b/src/app/components/flag-details/flag-details.component.html
@@ -8,7 +8,7 @@
 
   <div class="details__row">
     <div class="flag__column">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_the_Taliban.svg/320px-Flag_of_the_Taliban.svg.png" alt="pais">
+      <img class="flag-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_the_Taliban.svg/320px-Flag_of_the_Taliban.svg.png" alt="pais">
     </div>
     <div class="details__column">
       <div class="country__row">
