--- a/src/app/components/flag-details/flag-details.component.html
+++ b/src/app/components/flag-details/flag-details.component.html
@@ -1,6 +1,6 @@
 <div class="container__details">
   <div class="back__row">
-    <button>
+    <button class="back__btn">
       <i class="icon_back"></i>
       <p>Back</p>
     </button>
