--- a/src/app/components/flag-details/flag-details.component.css
+++ b/src/app/components/flag-details/flag-details.component.css
@@ -8,6 +8,17 @@
   flex-direction: row;
   align-items: center;
   flex-wrap: nowrap;
+  padding: 3em;
+}
+
+.back__btn{
+  padding: .5em;
+  color: var(--white);
+  background-color: transparent;
+  border: 0;
+  box-shadow: 1px 1px 1px 1px #00000044;
+  font-size: var(--detail-page);
+  width: 8em;
 }
 
 .details__row{
