--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
       <p>Dark mode</p>
     </div>
   </div>
-  <!-- <app-home></app-home> -->
-  <app-flag-details></app-flag-details>
+  <app-home></app-home>
+  <!-- <app-flag-details></app-flag-details> -->
 </div>
