--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,6 +16,7 @@
     </div>
   </div>
   <div class="container__flags-flags">
-    <app-flag></app-flag>
+    <button (click)="showInfo()"></button>
+    <app-flag [listCountry]="listCountry" ></app-flag>
   </div>
 </div>
