--- a/src/app/components/flag/flag.component.html
+++ b/src/app/components/flag/flag.component.html
@@ -1,5 +1,5 @@
 <div class="flag__container">
-  <div *ngFor="let list of listCountry">
+  <div class="flag" *ngFor="let list of listCountry">
     <img class="flag__img" src="{{list.flag}}" alt="{{list.name}}">
     <div class="flag_detail">
       <p class="flag__country-name">Pais: {{list.name}}</p>
