--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <p class="header__title">Where in the world?</p>
 
     <div class="container__header__dark-mode">
-      <i class="darkmode-icon"></i>
+      <i class="darkmode-icon"><span class="material-symbols-outlined">dark_mode</span></i>
       <p>Dark mode</p>
     </div>
   </div>
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
