--- a/src/app/components/flag-details/flag-details.component.css
+++ b/src/app/components/flag-details/flag-details.component.css
@@ -12,6 +12,9 @@
 }
 
 .back__btn{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   padding: .5em;
   color: var(--white);
   background-color: transparent;
@@ -19,6 +22,7 @@
   box-shadow: 1px 1px 1px 1px #00000044;
   font-size: var(--detail-page);
   width: 8em;
+
 }
 
 .details__row{
