--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,12 +6,12 @@
 
     <div class="filters-row__select">
       <select class="select" name="region" id="select-region">
-        <option value="0" selected>Filter by Region</option>
-        <option value="1">Africa</option>
-        <option value="1">America</option>
-        <option value="1">Asia</option>
-        <option value="1">Europe</option>
-        <option value="1">Oceania</option>
+        <option class="option" value="0" selected>Filter by Region</option>
+        <option class="option" value="1">Africa</option>
+        <option class="option" value="1">America</option>
+        <option class="option" value="1">Asia</option>
+        <option class="option" value="1">Europe</option>
+        <option class="option" value="1">Oceania</option>
       </select>
     </div>
   </div>
