--- a/src/styles.css
+++ b/src/styles.css
@@ -2,16 +2,6 @@
   --mobile: 375px;
   --desktop: 1440px;
 
-  /* Colors */
-  /* Neutral */
-
-  --dark-blue: hsl(209, 23%, 22%);  /* Dark-Mode-Elements */
-  --very-dark-blue: hsl(207, 26%, 17%);  /* Dark Mode Background */
-  --very-dark-blue-lmt: hsl(200, 15%, 8%);  /* Light Mode Text */
-  --dark-gray: hsl(0, 0%, 52%);  /* Light Mode Input */
-  --very-light-gray: hsl(0, 0%, 98%);  /* Light Mode Background */
-  --white: hsl(0, 0%, 100%);  /* Dark Mode Text & Light Mode Elements */
-
   /* Typography */
   /* Body Copy */
 
@@ -24,14 +14,22 @@
   --Weight-300: 300;
   --Weight-600: 600;
   --Weight-800: 800;
-
-  /* Icons */
-  /* - [Font Awesome](https://fontawesome.com)
-  - [IcoMoon](https://icomoon.io)
-  - [Ionicons](https://ionicons.com) */
 }
 
- *{
+:root .dark-theme{
+  --primary-elements: hsl(209, 23%, 22%);  /* Dark-Mode-Elements */
+  --primary-background: hsl(207, 26%, 17%);  /* Dark Mode Background */
+  --primary-text: hsl(0, 0%, 100%);  /* Dark Mode Text & Light Mode Elements */
+}
+
+:root .ligth-theme{
+  --primary-text: hsl(200, 15%, 8%);  /* Light Mode Text */
+  --primary-input: hsl(0, 0%, 52%);  /* Light Mode Input */
+  --primary-background: hsl(0, 0%, 98%);  /* Light Mode Background */
+  --primary-elements: hsl(0, 0%, 100%);  /* Dark Mode Text & Light Mode Elements */
+}
+
+*{
   margin: 0;
   padding: 0;
- }
+}
