--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<div class="container" [ngClass]="ligthMode ? 'container ligth-theme' : 'container'">
+<div class="container" [ngClass]="ligthMode ? 'container ligth-theme' : 'container dark-theme'">
   <div class="container__header">
     <p class="header__title">Where in the world?</p>
 
     <div class="container__header__dark-mode" (click)="changeMode()">
-      <i class="darkmode-icon"><span class="material-symbols-outlined">dark_mode</span></i>
-      <p>Dark mode</p>
+      <i class="darkmode-icon">
+        <span class="material-symbols-outlined">
+          {{ ligthMode ? 'dark_mode' : 'light_mode' }}
+        </span>
+      </i>
+      <p class="mode">{{ ligthMode ? 'Dark mode' : 'Light mode' }}</p>
     </div>
   </div>
   <router-outlet></router-outlet>
