--- a/src/app/components/flag-details/flag-details.component.css
+++ b/src/app/components/flag-details/flag-details.component.css
@@ -1,4 +1,5 @@
 .container__details{
+  height: calc(100vh - 85.16px);
   display: flex;
   flex-direction: column;
 }
@@ -32,7 +33,6 @@
   align-items: center;
   flex-wrap: nowrap;
   width: 100vw;
-  height: 75vh;
 }
 
 .flag__column{
