--- a/src/app/components/flag-details/flag-details.component.html
+++ b/src/app/components/flag-details/flag-details.component.html
@@ -34,7 +34,7 @@
       </div>
       <div class="country__row-border">
         <p class="border-countries">Border Countries: </p>
-        <button class="btn__border" *ngFor="let border of country.borders" (click)="detailsCountry(border)">{{border}}</button>
+        <p class="btn__border" *ngFor="let border of country.borders">{{border}}</p>
       </div>
     </div>
   </div>
